--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,11 @@ reportUnknownParameterType = true
 
 [tool.ruff]
 target-version = "py310" # Always generate Python 3.10-compatible code
+extend-exclude = [
+  "docs", "frontend"
+]
+
+[tool.ruff.lint]
 select = [
     "ASYNC", # flake8-async
     "C4",    # flake8-comprehensions
@@ -60,10 +65,8 @@ select = [
     "W",     # pycodestyle warnings
 ]
 ignore = [
+    "RUF006",  # asyncio-dangling-task
     "PERF203",  # try-except-in-loop
-]
-extend-exclude = [
-  "docs", "tests"
 ]
 
 [tool.mypy]
