--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-react": "^7.34.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.24.1",
     "socket.io-client": "^4.7.4",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0",
